--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^10.0.1",
+    "@types/jest": "^29.5.10",
     "@types/react": "^18.2.36",
     "@types/react-dom": "^18.2.14",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "cypress": "^13.6.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
